# curso-docker

resources/: index.html
resources/images/personas_crud/: Cargo.toml  LEEME.md
resources/images/personas_crud/personas-bruno/: create.yml  delete.yml  list.yml  opencollection.yml  read.yml  update.yml
resources/images/personas_crud/src/: main.rs
resources/images/persons_crud/: Cargo.toml  README.md
resources/images/persons_crud/persons-bruno/: create.yml  delete.yml  list.yml  opencollection.yml  read.yml  update.yml
resources/images/persons_crud/src/: main.rs
